force-app/main/default/objects/chttrunfollow__UnfollowTest__c/fields/chttrunfollow__Checkbox__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox</label>
    <type>Checkbox</type>
</CustomField>