force-app/main/default/objects/chttrunfollow__UnfollowTest__c/fields/chttrunfollow__Date__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>