force-app/main/default/objects/chttrunfollow__UnfollowTest__c/fields/chttrunfollow__DateTime__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__DateTime__c</fullName>
    <label>DateTime</label>
    <type>DateTime</type>
</CustomField>