force-app/main/default/objects/chttrunfollow__UnfollowTest__c/fields/chttrunfollow__Phone__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>