force-app/main/default/objects/chttrunfollow__UnfollowTest__c/fields/chttrunfollow__Picklist__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__Picklist__c</fullName>
    <label>Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>