force-app/main/default/objects/chttrunfollow__UnfollowTest__c/fields/chttrunfollow__URL__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>